# substrate-node-bitcoin

node/: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
